# 1_Code

./: README.md  docker-compose.yml  pyproject.toml
mongo-init/: init-bdd.js
script_import/: Dockerfile  requirements.txt  script_import.py
script_import/data/: hcare_dataset_test.csv
script_import/src/: csv_info.py  db_info.py  script_import_fct.py
script_import/tests/: test_insert_script.py
