[project]
name = "1-code"
version = "0.1.0"
description = ""
authors = [
    {name = "ThomasL"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
